--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "clsx": "^1.1.1",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/ramda": "^0.27.64",
     "prettier-standard": "^16.4.1"
   }
 }
