--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "clsx": "^1.1.1",
+    "immer": "^9.0.12",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.5",
